--- a/puissance4V2/build.gradle
+++ b/puissance4V2/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     
 	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
 	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
-	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.2'
+
 }
 
 test {
